apps/base/social/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: pds
    app.kubernetes.io/instance: social
    app.kubernetes.io/name: pds
  name: pds
  namespace: social
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: pds
      app.kubernetes.io/instance: social
      app.kubernetes.io/name: pds
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: pds
      labels:
        app.kubernetes.io/component: pds
        app.kubernetes.io/instance: social
        app.kubernetes.io/name: pds
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: pds-env
          image: ghcr.io/bluesky-social/pds:0.4.5001
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /xrpc/_health
              port: http
          name: pds
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /xrpc/_health
              port: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /pds
              name: data
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pds-data
