apps/base/social/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: pds
    app.kubernetes.io/instance: social
    app.kubernetes.io/name: social
  name: social
  namespace: social
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/component: pds
    app.kubernetes.io/instance: social
    app.kubernetes.io/name: pds
  type: ClusterIP
