apps/base/social/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: social
    app.kubernetes.io/name: social
  name: social
  namespace: social
spec:
  hostnames:
    - social.example.com
    - "*.social.example.com"
  parentRefs:
    - name: phobos-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - name: social
          port: 80
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: security-headers
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-cert
  namespace: social
spec:
  from:
    - group: ""
      kind: Gateway
      namespace: traefik
  to:
    - group: ""
      kind: Secret
      name: social-tls
