apps/base/social/resources/ingressroute.yaml
# yamllint disable rule:line-length
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: social
    app.kubernetes.io/name: social
  name: social
  namespace: social
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`social.example.com`) || HostRegexp(`.+\.social\.example\.com`)
      middlewares:
        - name: security-headers
      services:
        - name: social
          port: 80
  tls:
    secretName: social-tls
